Name:                Dust-tools
Version:             1.0
Description:         A set of tools for exploring network filtering
License:             GPL
License-file:        LICENSE
Author:              Brandon Wiley
Maintainer:          brandon@ischool.utexas.edu
Build-Type:          Simple
Cabal-Version:       >=1.8

Executable shaper-server
  Main-is: Dust/Services/Shaper/ShaperServer.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable shaper-client
  Main-is: Dust/Services/Shaper/ShaperClient.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable replay-server
  Main-is: Dust/Services/Replay/ReplayServer.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable replay-client
  Main-is: Dust/Services/Replay/ReplayClient.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable replay-convert
  Main-is: Dust/Services/Replay/convert.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable update
  Main-is:           Dust/Model/update.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable export
  Main-is:           Dust/Model/export.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable show
  Main-is:           Dust/Model/show.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split

Executable compile
  Main-is:           Dust/Model/compile.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust,
    bytestring,
    entropy,
    network,
    cereal,
    ghc-prim,
    binary,
    random,
    random-extras,
    random-source,
    random-fu,
    containers,
    directory,
    split
